--- a/index.html
+++ b/index.html
@@ -1,13 +1,167 @@
-Hello everyone, it is nice to meet you all :)
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>My portfolio</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
+        crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Services
+                        <span class="sr-only">(current)</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Portfolio</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">
+                        About me
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#">Get in touch</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="jumbotron">
+        <div class="container1">
+            <h1 class="display-3">LET'S CREATE A WEBSITE</h1>
+            <p class="lead">Hi, I'm passionate developer and I help create awesome websites</p>
+            <p class="lead my-5">
+                <a class="btn btn-success btn-lg" href="#" role="button">I want one</a>
+                <a class="btn btn-light btn-lg" href="#" role="button">Learn more</a>
+        </div>
+        </p>
+    </div>
+
+    <section>
+        <div class="container">
+            <div class="section title">
+                <h3>I might help you with</h3>
+                <span class="separator"></span>
+
+            </div>
+            <h3></h3>
+            <div class="row">
+                <div class="col-sm-6 col-md-4">
+                    <b>
+                        <i class="material-icons">face</i>
+                        <p>Simple Website Development</p>
+                    </b>
+                    <p>Do you have an idea for website? I create simple and beautiful websites that reflects your personal taste.</p>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <b>
+                        <i class="material-icons1">android</i>
+                        <p>PSD to HTML5/CSS conversion</p>
+                    </b>
+                    <p>Do you have a design for your website? Send it to me in (PSD, PNG, AI, etc.) format and I will convert
+                        it into standart compliant HTML5/CSS</p>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <b>
+                        <i class="material-icons">accessible</i>
+                        <p>Front – End Programming</p>
+                    </b>
+                    <p>Are you looking for a front end developer? I worked on many projects over the past years so I can offer
+                        my skills.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="gray-bg">
+        <div class="container">
+            <div class="section title">
+                <h3>WOOF WOOF!</h3>
+                <span class "separator"></span>
+
+            </div>
+
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="https://i.pinimg.com/736x/47/74/6e/47746ef47eb73147eb7e02bea0c42813--irish-setter-puppies-red-irish-setter.jpg"
+                            alt="first">
+
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="http://i0.kym-cdn.com/entries/icons/mobile/000/013/564/doge.jpg" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="https://cbsnews2.cbsistatic.com/hub/i/r/2015/02/27/dc63bf50-05ee-4733-9217-4718ee9c81fe/resize/620x465/cb60f988990627112be9a03525f66c34/labrador-retriever1istock.jpg"
+                            alt="Third slide">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+
+        </div>
+
+    </section>
+
+    <section>
+        <div class="container">
+
+            <div class="card" style="width: 30rem;">
+                <img class="card-img-top" src="http://deskbg.com/s3/wpp/19/19657/nice-dog-desktop-background.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h4 class="card-title">Cute dog</h4>
+                    <p class="card-text">Look how cute he is! You want some more of this doggo?</p>
+                    <a href="#" class="btn btn-primary">Press here and you will get more</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
